# AIGC

./: .gitignore  CLAUDE.md  CLAUDE_CN.md  README.md
code-qa-rag-system/: .gitignore  PROJECT_STATUS.md  QUICKSTART.md  README.md  app.py  code_indexer.py  code_loader.py  config.py  example.py  qa_engine.py  requirements.txt
code-qa-rag-system/examples/sample_cpp_project/: Makefile  Matrix.cpp  Matrix.h  README.md  main.cpp
docs/: 00_Glossary_and_Quick_Reference.md  00_Knowledge_Gap_Analysis.md  01_LLM_Fundamentals.md  02_Inference_Optimization.md  03_RAG_System_Theory.md  04_Prompt_Engineering.md  05_Learning_Roadmap.md  06_Model_Training_and_Finetuning.md  07_LLM_Evaluation.md  08_Agent_Systems.md  09_Multimodal_AI.md  10_Production_Deployment.md  11_Safety_and_Alignment.md  12_Job_Preparation_Guide.md  13_Data_Engineering.md  14_MLOps_Best_Practices.md  15_End_to_End_Project_Tutorial.md
learning/: 01_hello_llm.py  01_hello_llm_ollama.py  02_understand_kv_cache.py  OLLAMA_SETUP.md  README.md  setup.sh  test_ollama.py
llm-inference-engine/: .gitignore  CMakeLists.txt  PROJECT_STATUS.md  QUICKSTART.md  README.md
llm-inference-engine/cpp/include/: inference.h  kv_cache.h  quantization.h  utils.h
llm-inference-engine/cpp/src/: kv_cache.cpp  quantization.cpp  utils.cpp
llm-inference-engine/cpp/tests/: benchmark.cpp  test_kv_cache.cpp  test_quantization.cpp
mini_projects/: .gitignore  README.md
mini_projects/benchmark_tool/: benchmark.py
mini_projects/mini_rag/: mini_rag.py
mini_projects/prompt_optimizer/: prompt_optimizer.py
mini_projects/quantization_tool/: quantizer.py
templates/: README.md
templates/cicd/: github-actions.yml
templates/docker/: Dockerfile.inference  docker-compose.yml
templates/kubernetes/: deployment.yaml
templates/training/: config.yaml
